<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 Matthieu Bouquet <matthieu@forestchat.org>
  ~
  ~ This file is part of ForestChat.
  ~
  ~ ForestChat is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ForestChat is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ForestChat.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="16dp"
    tools:background="@drawable/bg_bottom_dialog">

    <LinearLayout
        android:id="@+id/copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy"
            app:tint="@color/text" />

        <TextView
            style="@style/Typography.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/message_option_copy"
            android:textColor="@color/text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_details"
            app:tint="@color/text" />

        <TextView
            style="@style/Typography.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/message_option_details"
            android:textColor="@color/text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove"
            app:tint="@color/text" />

        <TextView
            style="@style/Typography.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/message_option_removed"
            android:textColor="@color/text" />

    </LinearLayout>

</LinearLayout>