<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 Matthieu Bouquet <matthieu@forestchat.org>
  ~
  ~ This file is part of ForestChat.
  ~
  ~ ForestChat is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ForestChat is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ForestChat.  If not, see <http://www.gnu.org/licenses/>.
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="android.widget.LinearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/toolbarBackground"
        android:elevation="@dimen/toolbar_elevation"
        android:padding="11dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@null"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text" />

        <TextView
            style="@style/Typography.H6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/settings_theme"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/systemTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/systemCheckbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:button="@drawable/bg_checkbox" />

        <TextView
            style="@style/Typography.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/settings_theme_system"
            android:textColor="@color/text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lightTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/lightCheckbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:button="@drawable/bg_checkbox" />

        <TextView
            style="@style/Typography.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/settings_theme_light"
            android:textColor="@color/text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/darkTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/darkCheckbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:button="@drawable/bg_checkbox" />

        <TextView
            style="@style/Typography.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/settings_theme_dark"
            android:textColor="@color/text" />

    </LinearLayout>

</merge>